manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name used to reference this Deployment
  name: job-tracker
spec:
  # Two replicas for high availability — possible because PostgreSQL is external
  replicas: 2
  selector:
    matchLabels:
      app: job-tracker
  template:
    metadata:
      labels:
        app: job-tracker
    spec:
      containers:
        - name: job-tracker
          image: juanmnarroyo/job-tracker:v4
          ports:
            - containerPort: 8000
          command: ["sh", "-c"]
          args:
            - |
              # Run migrations and start Gunicorn
              python manage.py migrate &&
              python manage.py collectstatic --noinput &&
              gunicorn config.wsgi:application --bind 0.0.0.0:8000
